tests/paczka1/small_fuzzy/45450376.err
Error in line 2: XUloHInBzcg S447 15,0
Error in line 10: R3Y S603 93,0
Error in line 12: pC3lFV S447 58,7
Error in line 14: pC3lFV S603 89,9
